# crow-ade

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build-desktop.yml  lint-js.yml
crates/crow-acp/: Cargo.toml  TESTING.md  TODO.md
crates/crow-acp/src/: agent.rs  lib.rs  manager.rs  orchestration_state.rs  prompt.rs  prompt_2.rs  prompt_impl.rs  session.rs
crates/crow-acp/src/tools/: filesystem.rs  mod.rs  orchestration.rs  orchestration_2.rs  orchestration_3.rs  permissions.rs  terminal.rs
crates/crow-acp/tests/: echo_agent.py  integration.rs  orchestration_agent.py
crates/crow-auth/: Cargo.toml
crates/crow-auth/src/: lib.rs  storage.rs
crates/crow-dap/: Cargo.toml
crates/crow-dap/src/: client.rs  launch_config.rs  lib.rs  protocol.rs  session.rs  transport.rs
crates/crow-db/: Cargo.toml
crates/crow-db/src/: db.rs  lib.rs
crates/crow-extension-api/: Cargo.toml
crates/crow-extension-api/src/: api.rs  env_api.rs  lib.rs  message_handler.rs  types.rs  window.rs  workspace_api.rs
crates/crow-extensions/: Cargo.toml
crates/crow-extensions/src/: lib.rs  manifest.rs  marketplace.rs  paths.rs  protocol.rs  registry.rs
crates/crow-git/: Cargo.toml
crates/crow-git/src/: lib.rs
crates/crow-keymap/: Cargo.toml
crates/crow-keymap/src/: context.rs  lib.rs
crates/crow-lsp/: Cargo.toml
crates/crow-lsp/src/: call_hierarchy.rs  client.rs  code_action_engine.rs  completion_engine.rs  conversion.rs  diagnostics.rs  document_color.rs  document_link.rs  format.rs  go_to.rs  hover_engine.rs  inlay_hints.rs  lib.rs  rename_engine.rs  selection_range.rs  signature_help.rs  type_hierarchy.rs  workspace_edit.rs
crates/crow-profiles/: Cargo.toml
crates/crow-remote/: Cargo.toml
crates/crow-remote/src/: codespaces.rs  container.rs  lib.rs  manager.rs  server.rs  ssh.rs  transport.rs  tunnel.rs  wsl.rs
crates/crow-settings/: Cargo.toml
crates/crow-settings/src/: defaults.rs  lib.rs  profiles.rs
crates/crow-syntax/: Cargo.toml
crates/crow-syntax/src/: bracket.rs  language.rs  lib.rs  parser.rs
crates/crow-tasks/: Cargo.toml
crates/crow-tasks/src/: lib.rs
crates/crow-terminal/: Cargo.toml
crates/crow-terminal/src/: lib.rs  pty.rs  renderer.rs  shell.rs  shell_integration.rs
crates/crow-text/: Cargo.toml
crates/crow-text/src/: diff.rs  edit.rs  lib.rs  position.rs  range.rs  utf16.rs
crates/crow-textmate/: Cargo.toml
crates/crow-textmate/src/: registry.rs
crates/crow-theme/: Cargo.toml
crates/crow-theme/src/: default_themes.rs  lib.rs  theme_resolver.rs
crates/crow-update/: Cargo.toml
crates/crow-update/src/: install.rs  lib.rs  manager.rs  manifest.rs  signature.rs
crates/crow-update/src/install/: linux.rs  macos.rs
crates/crow-workspace/: Cargo.toml
crates/crow-workspace/src/: file_decorations.rs  file_operations.rs  file_tree.rs  lib.rs  multi_root.rs  search.rs  trust.rs
crow-extension-sdk/: Cargo.toml
crow-extension-sdk/src/: lib.rs
crow-extension-sdk/wit/: world.wit
docs/: rich-tool-call-rendering.md  tools-refactor-design.md
docs/crow/: FUTURE.md  acp-terminal-display.typ  auto-surround-analysis.typ  chat-text-color-fix.typ  duplicate-user-message-fix.typ  extension-loading-fix.typ  inter-agent-communication.md  markdown-preview-contrib.md  markdown-preview-solution.md  scroll-and-tab-switching-proposal.md  session-load.typ  sidex-acp-wiki.md  terminal-scroll-fix.typ  tripartite-agent-architecture.md
examples/hello-extension/: Cargo.toml  crow.toml
examples/hello-extension/src/: lib.rs
extensions-rust/: Cargo.toml
extensions-rust/cpp-language-extension/: Cargo.toml  crow.toml
extensions-rust/cpp-language-extension/src/: lib.rs
extensions-rust/css-language-extension/: Cargo.toml  crow.toml
extensions-rust/css-language-extension/src/: lib.rs
extensions-rust/go-language-extension/: Cargo.toml  crow.toml
extensions-rust/go-language-extension/src/: lib.rs
extensions-rust/python-language-extension/: Cargo.toml  crow.toml
extensions-rust/python-language-extension/src/: lib.rs
extensions-rust/rust-language-extension/: Cargo.toml  crow.toml
extensions-rust/rust-language-extension/src/: lib.rs
extensions-rust/typescript-language-extension/: Cargo.toml  crow.toml
extensions-rust/typescript-language-extension/src/: lib.rs
infrastructure/marketplace-proxy/: README.md  package-lock.json  package.json  wrangler.toml
infrastructure/marketplace-proxy/src/: compat.ts  gallery.ts  ms.ts  openvsx.ts  types.ts  worker.ts
public/webview-pre/: index.html
scripts/: copy-extensions.js  postbuild.js  setup-extensions.sh
scripts/themes/: crow_purple.json
src/: bootstrap-globals.ts  main.ts  nls-loader.ts  styles.css  tsconfig.base.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.crow-ui.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/extension-host/: host.cjs  server.cjs
src-tauri/extension-host/node-polyfills/: _sync_bridge.js  module.js  os.js  process.js  require.js
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: acp_chat.rs  compress.rs  crow_terminal.rs  crypto.rs  db_state.rs  debug.rs  ext_api.rs  ext_host.rs  extension_platform.rs  extension_wasm.rs  extensions.rs  fs.rs  git.rs  index.rs  keymap.rs  logging.rs  lsp.rs  mod.rs  os.rs  path.rs  process.rs  profiles.rs  proxy.rs  remote.rs  search.rs  secrets.rs  settings.rs  storage.rs  syntax.rs  tasks.rs  terminal.rs  text.rs  textmate.rs  theme.rs  updater.rs  window.rs
src-wasm/hash/: Cargo.toml
src-wasm/hash/src/: lib.rs
src-wasm/scroll/: Cargo.toml
src-wasm/tfidf/: Cargo.toml
src-wasm/tfidf/src/: lib.rs
src/vs/: crow-bridge.ts
src/vs/editor/: editor.all.ts
src/vs/workbench/: crowNullServices.ts  workbench.common.main.ts  workbench.web.main.internal.ts  workbench.web.main.ts
src/vscode-dts/: vscode.proposed.crow.d.ts
(+1667 files in other folders)
