[package]
name = "crow-db"
description = "SQLite state persistence for Crow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
