[package]
name = "crow-lsp"
description = "Language Server Protocol client for Crow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crow-text = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
lsp-types = "0.97"

[lints]
workspace = true
