[package]
name = "crow-remote"
description = "Remote development for Crow — SSH, WSL, Dev Containers, Codespaces, Tunnels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "2"
log = "0.4"
russh = { workspace = true }
russh-keys = "0.46"
bollard = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
dirs = "5"
async-trait = "0.1"
tar = "0.4"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
