[package]
name = "crow-text"
description = "Rope-based text buffer for the Crow editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
